--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,23 @@
                 </div>
             </div>    
         </div>
-        <div id="rentas_destacadas"></div>
+        <div class="px-6 h-full w-full" id="rentas_destacadas">
+            <p class="text-3xl text-primary font-semibold pb-6 mt-2">Rentas destacadas</p>
+            <div class="w-full h-auto flex flex-col space-y-4 items-center justify-center">
+                <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
+                    <p class="CardTitle">Chicago</p>
+                    <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina.</p>
+                </div>
+                <div class="w-full h-96 bg-LA bg-cover rounded-xl">
+                    <p class="CardTitle">Los Angeles</p>
+                    <p class="text-sm pl-8 text-black mr-24">4 habitaciones, 3 baños, cocina y piscina privada.</p>
+                </div>
+                <div class="w-full h-96 bg-miami bg-cover rounded-xl">
+                    <p class="CardTitle">Miami</p>
+                    <p class="text-sm pl-8 text-black mr-24">3 habitaciones,2 baños, cocina con increible vista al mar.</p>
+                </div>
+            </div>
+        </div>
         <div id="faq"></div>
     </section>
     <footer></footer>
