--- a/public/index.html
+++ b/public/index.html
@@ -124,20 +124,28 @@
                 </div>
             </div>    
         </div>
-        <div class="px-6 h-auto w-full" id="rentas_destacadas">
+        <div class="px-6 w-auto lg:px-6" id="rentas_destacadas">
             <p class="text-3xl text-primary font-semibold pb-6 mt-2">Rentas destacadas</p>
-            <div class="w-full h-auto flex flex-col space-y-4 items-center justify-center">
-                <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
-                    <p class="CardTitle">Chicago</p>
-                    <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina.</p>
+            <div class="w-full h-full flex flex-col items-center justify-center">
+                <div class="w-full h-96 bg-chicago bg-cover rounded-xl mb-6 lg:bg-center">
+                    <p class="CardTitle lg:text-b lg:text-black">Chicago</p>
+                    <p class="text-sm pl-8 text-white mr-24 lg:text-lg lg:text-black">2 habitaciones, baño y cocina</p>
                 </div>
-                <div class="w-full h-96 bg-LA bg-cover rounded-xl">
-                    <p class="CardTitle">Los Angeles</p>
-                    <p class="text-sm pl-8 text-black mr-24">4 habitaciones, 3 baños, cocina y piscina privada.</p>
-                </div>
-                <div class="w-full h-96 bg-miami bg-cover rounded-xl">
-                    <p class="CardTitle">Miami</p>
-                    <p class="text-sm pl-8 text-black mr-24">3 habitaciones,2 baños, cocina con increible vista al mar.</p>
+                <div class="w-full lg:flex lg:h-full lg:w-full lg:space-x-4">
+                    <div class="w-full h-96 bg-LA bg-cover rounded-xl mb-6 lg:h-auto">
+                        <p class="CardTitle">Los Angeles</p>
+                        <p class="text-sm pl-8 text-white mr-24 lg:text-lg">3 habitaciones, 2 baños, cocina y excelente vista al mar.</p>
+                    </div>
+                    <div class="h-full w-full">
+                        <div class="w-full h-96 bg-miami bg-cover rounded-xl mb-6">
+                            <p class="CardTitle">Miami</p>
+                            <p class="text-sm pl-8 text-white mr-24 lg:text-lg">4 habitaciones, 3 baños, cocina y piscina privada</p>
+                        </div>
+                        <div class="w-full h-96 bg-bali bg-cover rounded-xl mb-6">
+                            <p class="CardTitle">Bali</p>
+                            <p class="text-sm pl-8 text-white mr-24 lg:text-lg">2 habitaciones, baño, cocina y piscina privada</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,7 +175,7 @@
             </div>
         </div>
     </section>
-    <footer class="w-full h-auto bg-gray-100 px-6 space-y-2 mt-6 pt-4 mb-18 pb-16">
+    <footer class="w-full h-auto bg-gray-100 px-6 space-y-2 mt-6 pt-4 mb-18 pb-16 lg:pb-4">
         <p class="text-lg">Acerca De</p>
         <p class="text-sm text-gray-400">Inversionistas</p>
         <p class="text-sm text-gray-400">Empleos</p>
