--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <button class="w-48 bg-white rounded-full text-lg text-primary shadow-sm font-semibold p-4 transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110 lg:ml-16">Explorar</button>
                 </div>
                 <div class="w-full h-full lg:h-96 lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center">
-                    <img class="lg:hidden" src="./img/sanFrancisco.jpg" alt="San Francisco City">
+                    <img class="lg:hidden" src="./public/img/sanFrancisco.jpg" alt="San Francisco City">
                 </div>
             </div>
         </div>
